@@ -1,5 +1,11 @@
 2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>
 
+	Fix for sourceforge.net bug #1957780.
+	* include/avr/fuse.h: Add more documentation on how to set the fuses
+	if compiling in C++.
+
+2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>
+
 	Fix for sourceforge.net bug #1969436.
 	* include/avr/iom32u4.h (SPM_PAGESIZE): Fix size to be 128.
 
